# AnyIntruder

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  RELEASE_NOTES.md  any_intruder.c  anyintruder  config.example.yaml  events.db
.github/workflows/: release.yml
assets/: sequence.puml
include/: config.h  event.h  platform.h
includes/: attacker.h  config.h  event.h  event_store.h  file_utilities.h  header.h  http_client.h  http_request.h  http_response.h  logger.h  monitor.h  platform.h  platform_webhook.h  projection.h  snapshot.h  stats.h  ui.h
includes/webhook/: dingding.h  discord.h  telegram.h  wechat.h
src/: event_store.c  file_utilities.c  http_client.c  logger.c  monitor.c  platform_webhook.c  projection.c  snapshot.c  stats.c  ui.c
src/webhook/: dingding.c  discord.c  telegram.c  wechat.c
test/: Makefile  test_webhook.c  unity.c  unity.h
